--- a/composer.json
+++ b/composer.json
@@ -15,38 +15,31 @@
     "require": {
         "php": ">=7.4.26",
         "doctrine/orm": "^2.5",
-        "doctrine/doctrine-bundle": "2.7.2",
+        "doctrine/doctrine-bundle": "2.*",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/flex": "^1.20",
         "doctrine/annotations": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "symfony/security-bundle": "4.*",
-        "symfony/asset": "5.4.*",
-        "symfony/twig-bundle": "^4.4",
+        "symfony/security-bundle": "5.0.*",
+        "symfony/asset": "5.0.*",
+        "symfony/twig-bundle": "5.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/mailer": "4.4.*",
-        "symfony/form": "4.4.*",
-        "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/mailer": "5.0.*",
+        "symfony/form": "5.0.*",
+        "symfony/validator": "5.0.*",
+        "symfony/yaml": "5.0.*"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0",
-        "symfony/dotenv": "^5.4",
+        "symfony/dotenv": "5.0.*",
         "symfony/maker-bundle": "1.*",
-        "doctrine/doctrine-fixtures-bundle": "3.4.4",
+        "doctrine/doctrine-fixtures-bundle": "3.4.*",
         "symfony/stopwatch": "^5.4",
         "symfony/web-profiler-bundle": "5.0.*"
     },
     "scripts": {
-        "symfony-scripts": [
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
-        ],
         "post-install-cmd": [
             "@symfony-scripts"
         ],
@@ -67,7 +60,11 @@
         "symfony-bin-dir": "bin/",
         "symfony-var-dir": "var/",
         "symfony-tests-dir": "tests/",
-        "symfony-assets-install": "relative"
+        "symfony-assets-install": "relative",
+        "symfony": {
+            "allow-contrib": false,
+            "require": "5.0.*"
+        }
     },
     "config": {
         "allow-plugins": {
