--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         }
     },
     "require": {
-        "php": ">=7.4.26",
+        "php": ">=8.1.0",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-bundle": "2.*",
         "symfony/polyfill-apcu": "^1.0",
@@ -30,7 +30,8 @@
         "symfony/form": "5.4.*",
         "symfony/validator": "5.4.*",
         "symfony/yaml": "5.4.*",
-        "symfony/runtime": "5.4.*"
+        "symfony/runtime": "5.4.*",
+        "sensio/framework-extra-bundle": "^6.2"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^3.0",
