--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,9 @@
         "symfony/maker-bundle": "1.*",
         "symfony/stopwatch": "^5.4",
         "symfony/web-profiler-bundle": "5.4.*",
-        "squizlabs/php_codesniffer": "^3.7"
+        "squizlabs/php_codesniffer": "^3.7",
+        "fakerphp/faker": "^1.23",
+        "doctrine/doctrine-fixtures-bundle": "^3.4"
     },
     "scripts": {
         "auto-scripts": {
