--- a/composer.json
+++ b/composer.json
@@ -34,14 +34,18 @@
         "sensio/framework-extra-bundle": "^6.2"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "^3.0",
+        "symfony/phpunit-bridge": "6.*",
         "symfony/dotenv": "5.4.*",
         "symfony/maker-bundle": "1.*",
         "symfony/stopwatch": "^5.4",
         "symfony/web-profiler-bundle": "5.4.*",
         "squizlabs/php_codesniffer": "^3.7",
         "fakerphp/faker": "^1.23",
-        "doctrine/doctrine-fixtures-bundle": "^3.4"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
+        "phpunit/phpunit": "10",
+        "dama/doctrine-test-bundle": "^7.2"
     },
     "scripts": {
         "auto-scripts": {
