--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -36,8 +36,8 @@ security:
     access_control:
         - { path: ^/login, roles: PUBLIC_ACCESS }
         - { path: ^/users/create, roles: PUBLIC_ACCESS }
-        - { path: ^/users, roles: ROLE_ADMIN }
-        - { path: ^/, roles: ROLE_USER }
+        - { path: ^/users/*, roles: ROLE_ADMIN }
+        - { path: ^/tasks/*, roles: ROLE_USER }
 
 when@test:
     security:
