--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,7 +8,6 @@
     <server name="SHELL_VERBOSITY" value="-1"/>
     <server name="SYMFONY_PHPUNIT_REMOVE" value=""/>
     <server name="SYMFONY_PHPUNIT_VERSION" value="9.5"/>
-    <env name="BOOTSTRAP_CLEAR_CACHE_ENV" value="test"/>
   </php>
   <testsuites>
     <testsuite name="Project Test Suite">
@@ -20,4 +19,7 @@
       <directory suffix=".php">src</directory>
     </include>
   </coverage>
+  <extensions>
+    <bootstrap class="DAMA\DoctrineTestBundle\PHPUnit\PHPUnitExtension" />
+  </extensions>
 </phpunit>
