--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,10 @@
 /web/bundles/
 
 ###> symfony/phpunit-bridge ###
-.phpunit
 .phpunit.result.cache
+.phpunit.cache/*
 /phpunit.xml
+bin/.phpunit
 ###< symfony/phpunit-bridge ###
 
 ###> symfony/framework-bundle ###
@@ -35,3 +36,10 @@
 /.phpcs-cache
 /phpcs.xml
 ###< squizlabs/php_codesniffer ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+.phpunit.cache/*
+
+###< phpunit/phpunit ###
